13821
The following Java source compiles successfully as expected with javac,
```scala
// Outer.java
package test;

import static test.Outer.Inner.*;

public class Outer {
  static public enum Inner {
    Red, Green, Blue
  }

  public static void main(String[] args) {
    System.out.println(Red.toString());
  }
}
```

However when it is compiled by scalac together with the following Scala source file,
```scala
// Use.scala
package test

object Use {
  Outer.foo
}
```

scalac produces the following incorrect error report,
```scala
src/test/Outer.java:3: error: illegal cyclic reference involving object Outer
import static test.Outer.Inner.*;
       ^
src/test/Use.scala:4: error: value foo is not a member of object test.Outer
  Outer.foo
        ^
two errors found
```
